# inf8775

tp1/: benchmark.sh  data.ods  main.go  rapport.odt  tp.sh
tp1/gen_matrix/: Gen.sh  gen.sh
tp2/: .gitignore  data.ods  makefile  rapport.odt  tp.sh
tp2/src/: algo.cpp  algo.hpp  algo_dynamic.cpp  algo_dynamic.hpp  algo_greedy.cpp  algo_greedy.hpp  algo_search.cpp  algo_search.hpp  main.cpp  notes.cpp  notes.hpp  transitions.cpp  transitions.hpp
tp3/: .gitignore  CMakeLists.txt  data.ods  makefile  rapport.odt  tp.sh
tp3/include/: algorithm.hpp  algorithm_basic.hpp  chromosome.hpp  chromosome_parallel.hpp  greedy.hpp  population.hpp  settings.hpp
tp3/scripts/: check_sol.py  generator.py  pandemic
tp3/source/: CMakeLists.txt  algorithm.cpp  algorithm_basic.cpp  chromosome.cpp  chromosome_parallel.cpp  greedy.cpp  main.cpp  population.cpp  settings.cpp
tp3/tests/: CMakeLists.txt  algorithm_basic.cpp  chromosome_test.cpp  greedy_test.cpp  population_test.cpp
